Prevent payroll table from being too long horizontally

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,7 @@ body {
     padding: 1em;
     min-height: 100vh;
     min-width: 100vw;
+    width: min-content;
 }
 
 body.dark-theme {
